--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.password=scii
 
 mybatis.type-aliases-package=scii.training.model
 mybatis.mapper-locations=classpath:scii/training/mapperxml/*.xml
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mohamedkhalidk635@gmail.com
+spring.mail.password=azxeccniwptyfohz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
