--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.datasource.password=scii
 mybatis.type-aliases-package=scii.training.model
 mybatis.mapper-locations=classpath:scii/training/mapperxml/*.xml
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=119.18.54.136
 spring.mail.port=587
-spring.mail.username=mohamedkhalidk635@gmail.com
-spring.mail.password=azxeccniwptyfohz
+spring.mail.username=mohamed.499@scii.in
+spring.mail.password=nuqh5792
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
