--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.mail.username=mohamed.499@scii.in
 spring.mail.password=nuqh5792
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.servlet.session.timeout=5m
