--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,21 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/taglibs/standard -->
-		<dependency>
+		<!--<dependency>
 		    <groupId>taglibs</groupId>
 		    <artifactId>standard</artifactId>
 		    <version>1.1.2</version>
-		</dependency>
+		</dependency>-->
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-impl</artifactId>
+			<version>1.2.5</version>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
