--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=scii
 mybatis.type-aliases-package=scii.training.model
 mybatis.mapper-locations=classpath:scii/training/mapperxml/*.xml
 
-spring.mail.host=119.18.54.136
+spring.mail.host=mail.scii.in
 spring.mail.port=587
 spring.mail.username=mohamed.499@scii.in
 spring.mail.password=nuqh5792
